examples/type_system/failing/164_match_unresolved_arm_stays_suppressed.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/164_match_unresolved_arm_stays_suppressed.flx
// error[E004]: Undefined Variable
//
// I can't find a value named `mystery_value`.
//
//   examples/type_system/failing/164_match_unresolved_arm_stays_suppressed.flx:21:13
//    |
// 21 |     let x = mystery_value
//    |             ^^^^^^^^^^^^^
//
// Hint:
//   Define it first: let mystery_value = ...;
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E004

fn main() -> Unit {
    let x = mystery_value
    let _y = match true {
        true -> 1,
        false -> x,
    }
}
